package(default_visibility = ["//visibility:public"])

load("//misc:build-doc.bzl", "apidoc")

apidoc(
    name = "api-doc-src",
    output = "api-doc.ts",
    srcs = [
        "//src/accordion:sources",
        "//src/alert:sources",
        "//src/buttons:sources",
        "//src/carousel:sources",
        "//src/collapse:sources",
        "//src/datepicker:sources",
        "//src/dropdown:sources",
        "//src/modal:sources",
        "//src/pagination:sources",
        "//src/popover:sources",
        "//src/progressbar:sources",
        "//src/rating:sources",
        "//src/tabset:sources",
        "//src/timepicker:sources",
        "//src/tooltip:sources",
        "//src/typeahead:sources",
    ]
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "api-doc",
    srcs = [":api-doc-src"],
    tsconfig = "//:tsconfig.json",
)

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/accordion",
        "//src/alert",
        "//src/buttons",
        "//src/carousel",
        "//src/collapse",
        "//src/datepicker",
        "//src/dropdown",
        "//src/modal",
        "//src/pagination",
        "//src/popover",
        "//src/progressbar",
        "//src/rating",
        "//src/tabset",
        "//src/timepicker",
        "//src/tooltip",
        "//src/typeahead",
    ],
)
