package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sources",
    srcs = glob(["*.ts"], exclude = ["*.spec.ts"]),
)

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "tooltip",
    srcs = [":sources"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/util",
        "@rxjs",
    ]
)
