package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sources",
    srcs = glob(["*.ts"], exclude = ["*.spec.ts"]),
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "util",
    srcs = [":sources"],
    tsconfig = "//:tsconfig.json",
)
