package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "shared",
    srcs = glob(["**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    assets = glob(["**/*.html"]),
    deps = [
        "//src:api-doc",
        "//demo/src/app/shared",
        "@rxjs",
    ]
)
